css rewritten for whiteboard page

--- a/client/_variables.scss
+++ b/client/_variables.scss
@@ -102,7 +102,7 @@ $footerBorderShadow: 5px -5px 10px $shadowColor;
 
 	border-radius: $border-radius;
 	border: 0.2vw solid $themeInverseColor;
-	padding: 0.2vw 0.7vw;
+	padding: 0.5vh 0.7vw;
 	transition: all 0.4s;
 	font-size: $fontSize2;
 
