--- a/client/src/Pages/WhiteBoard/style.module.scss
+++ b/client/src/Pages/WhiteBoard/style.module.scss
@@ -4,13 +4,13 @@
 	display: flex;
 	width: 100vw;
 	height: 92vh;
-	justify-content: space-between;
+	// justify-content: space-between;
+	justify-content: center;
 	align-items: center;
-	padding-top: 5px;
 
-	@media (max-width: 768px) {
-		justify-content: center;
-	}
+	// @media (max-width: 768px) {
+	// 	justify-content: center;
+	// }
 }
 
 #orientationMessage {
