--- a/client/src/components/Toolbox/style.module.scss
+++ b/client/src/components/Toolbox/style.module.scss
@@ -1,199 +1,327 @@
-/* Variables */
 @import 'variables';
 
 .wrapper {
-	@include flex-center;
+	padding: $border-padding;
+	border-radius: $border-radius 0px 0px 0px;
+	border: 1px solid $shadowColor;
+	box-shadow: -5px 0px 10px $shadowColor;
+
+	// border: 2px solid red;
+
+	position: absolute;
+	top: 8vh;
+	left: 0;
+	bottom: 0;
+	z-index: 1;
+	max-width: 30%;
+
+	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
+	gap: $gap;
 
-	@include main-box;
-	border-radius: 0 $border-radius 0 0;
-	margin: 0px;
+	transition: all 0.5s ease-in-out;
 
-	min-width: 15vw;
-	max-width: 18vw;
-	height: 100%;
-	@media (max-width: 768px) {
-		display: none;
+	.toolicon {
+		position: absolute;
+		top: 1%;
+		right: 0;
+		font-size: 2.5vh;
+		color: $textColor2;
+		transform: translate(100%, 0);
+		cursor: pointer;
+		transition: var(--transition);
+		&:hover {
+			color: $textColor3;
+			font-size: $iconSizeHover;
+		}
+		@media (max-height: 768px) {
+			font-size: 5vh;
+			&:hover {
+				font-size: 6vh;
+			}
+		}
+	}
+
+	@media (max-height: 768px) {
+		max-width: 40%;
 	}
 }
 
-/* Styles */
+.hide {
+	transform: translateX(-100%);
+}
+.show {
+	display: flex;
+}
+.hide2 {
+	display: none;
+}
 .container {
-	max-width: 100%;
-	font-size: $fontSize2;
-	@media (max-width: 768px) {
-		display: none;
-		position: fixed;
-		left: 0;
-		top: 10vh;
-		bottom: 0vh;
-		height: auto;
-		max-width: 20px;
-		max-height: 30%;
-		flex-direction: column;
-	}
+	/* Styles for the main toolbox container */
+	flex-grow: 7;
+	max-height: 90%;
+	width: 100%;
+	// border: 2px solid blue;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	gap: $gap;
 
 	.heading {
-		@include common-box;
-		@include flex-center;
+		flex-grow: 3;
+		max-height: 30%;
+
+		display: flex;
+		flex-direction: column;
 		justify-content: space-between;
-		padding: 10px;
-		flex-direction: column;
-		gap: 5px;
-		width: 100%;
+		align-items: center;
+		// gap: calc($gap/2);
 
-		// flex-wrap: 1;
-	}
+		padding: $border-padding;
+		border-radius: $border-radius;
+		$border-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+		border: 1px solid $themeInverseColor;
+		color: $textColor2;
 
-	.button {
-		@include buttons;
-		padding: 5px 10px;
-		color: white;
-		cursor: pointer;
-		width: 100%;
-		transition: background-color 0.3s ease;
-		gap: 5px;
-	}
+		@media (max-height: 768px) {
+			max-height: 150px;
+		}
 
-	.connected {
-		background-color: $green;
-		font-weight: bold;
-	}
+		// border: 2px solid red;
 
-	.disconnected {
-		background-color: $red;
-		font-weight: bold;
-	}
+		.button {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			// width: 90%;
+			cursor: pointer;
 
-	.roomName {
-		@include info;
-		margin: 0px;
-	}
+			border-radius: $border-radius;
+			border: 0.2vw solid $themeInverseColor;
+			padding: 0.4vh 0.4vw;
+			font-size: $fontSize3;
+			background-color: $primaryColor3;
+			color: $white;
+			transition: all 0.4s;
 
-	.share {
-		display: flex;
-		gap: 5px;
-		width: 100%;
-	}
-	.buttonsSection {
-		display: flex;
-		flex-direction: column;
-		gap: 5px;
+			&:focus {
+				outline: none;
+			}
+
+			&:disabled {
+				cursor: not-allowed;
+				background-color: $textColor3;
+				color: $textInverse;
+			}
+			&:not(:disabled):hover {
+				background-color: darken($primaryColor3, 10%);
+			}
+		}
+
+		.roomName {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			gap: 0.5vw;
+
+			padding: 0.4vh 0.4vw;
+			background-color: $primaryColor4;
+			border-radius: $border-radius;
+			// width: 100%;
+			color: $white;
+			font-size: $fontSize3;
+			:nth-child(1) {
+				font-style: bold;
+			}
+			:nth-child(2) {
+				font-style: italic;
+			}
+			&:hover {
+				background-color: lighten($primaryColor4, 10%);
+			}
+		}
+		.share {
+			display: flex;
+			width: 100%;
+			justify-content: center;
+			gap: calc($gap/2);
+			button {
+				flex-grow: 1;
+			}
+		}
+		.connected {
+			width: 100%;
+			font-size: $fontSize2;
+			background-color: $green;
+		}
+		.disconnected {
+			width: 100%;
+			font-size: $fontSize2;
+			background-color: $red;
+		}
 	}
 
 	.toolbox {
-		@include common-box;
-		@include flex-center;
-		border: none;
+		flex-grow: 7;
+		max-height: 70%;
+
+		display: flex;
 		flex-direction: column;
-		align-items: stretch;
-		width: 100%;
-		max-width: 100%;
+		justify-content: space-between;
+
+		// border: 2px solid red;/
+
+		label {
+			color: $textColor2;
+		}
 
 		.tools {
-			flex-grow: 4;
-
-			@include flex-center;
+			display: flex;
 			flex-direction: column;
-			align-items: left;
-			// justify-content: space-evenly;
+			// justify-content: center;
+			text-align: center;
+			span {
+				display: flex;
+				justify-content: space-evenly;
+			}
 
-			.tool {
-				@include flex-center;
-				// flex-wrap: wrap;
-				max-width: 100%;
-				gap: 5px;
+			button {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				cursor: pointer;
 
-				.active {
-					background-color: rgb(49, 49, 245);
+				background-color: $primaryColor3;
+				border-radius: $border-radius;
+				border: 0.2vw solid $themeInverseColor;
+				font-size: $fontSize2;
+				color: white;
+
+				width: 40px;
+				height: 30px;
+
+				transition: all 0.4s;
+
+				&:focus {
+					outline: none;
 				}
+
+				&:disabled {
+					cursor: not-allowed;
+					background-color: $textColor3;
+					color: $textInverse;
+				}
+				&:not(:disabled):hover {
+					background-color: darken($primaryColor3, 10%);
+				}
+			}
+			.active {
+				background-color: darken($primaryColor3, 10%);
+				color: $textInverse;
 			}
 		}
 
 		.lineWidth {
-			@include flex-center;
-			justify-content: space-between;
-			width: 100%;
-			// border: 2px solid white;
+			display: flex;
+			justify-content: space-evenly;
 
 			input {
-				padding: 5px;
-				border: 1px solid #ccc;
-				border-radius: $border-radius;
-				font-size: $fontSize2;
-				max-width: 30%;
+				max-width: 50px;
 			}
 		}
+
 		.color {
 			display: flex;
-			justify-content: space-between;
-			width: 100%;
-			input {
-				max-width: 30%;
+			justify-content: space-evenly;
+		}
+
+		.buttonsSection {
+			/* Styles for the buttons section */
+			display: flex;
+			justify-content: space-around;
+			gap: calc($gap/2);
+
+			.button {
+				flex-grow: 1;
+				display: flex;
+				justify-content: space-evenly;
+				align-items: center;
+				// width: 90%;
+				cursor: pointer;
+
+				border-radius: $border-radius;
+				border: 0.2vw solid $themeInverseColor;
+				height: 30px;
+				padding: 0.1vh 0.1vw;
+				font-size: $fontSize3;
+				background-color: $primaryColor3;
+				color: white;
+				transition: all 0.4s;
+
+				&:focus {
+					outline: none;
+				}
+
+				&:disabled {
+					cursor: not-allowed;
+					background-color: $textColor3;
+					// color: $textInverse;
+				}
+				&:not(:disabled):hover {
+					background-color: darken($primaryColor3, 10%);
+				}
 			}
 		}
 	}
 }
+
 .userdiv {
-	@include common-box;
-	flex-grow: 10;
-	width: 100%;
-	overflow: auto;
-	// min-height: 50%;
+	flex-grow: 3;
+	max-height: 35%;
+	border: 2px solid red;
+
+	border-radius: $border-radius;
+	border: 1px solid $themeInverseColor;
+	padding: $border-padding;
+	$border-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+	color: $textColor2;
+	font-size: $fontSize2;
 
 	.users {
-		display: flex;
-		flex-direction: column;
-		justify-content: space-evenly;
-		list-style-type: none;
-		width: 100%;
+		overflow: auto;
+		max-height: 90%;
+		li {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
 
-		.green {
-			@include info;
+			padding: 0.4vh 0.4vw;
+			border-radius: $border-radius;
 			p {
-				color: $green;
+				font-size: $fontSize3;
+			}
+			:nth-child(1) {
+				font-style: bold;
+			}
+			:nth-child(2) {
+				font-style: italic;
+			}
+		}
+		li + li {
+			margin-top: 0.5vh;
+		}
+		.green {
+			background-color: $green;
+			&:hover {
+				background-color: lighten($green, 10%);
 			}
 		}
 		.red {
-			@include info;
-			p {
-				color: $red;
+			background-color: $red;
+			&:hover {
+				background-color: lighten($red, 10%);
 			}
 		}
 	}
-	@media (max-width: 768px) {
-		display: none;
-		position: fixed;
-		left: 0;
-		top: 10vh;
-		bottom: 0vh;
-		height: auto;
-		max-width: 300px;
-	}
-}
-
-.icon {
-	@include icon;
-}
-.toolicon,
-.usericon {
-	color: $themeInverseColor;
-	font-size: calc($fontSize2 * 2.5);
-	display: none;
-	z-index: 2;
-	position: fixed;
-	left: 0;
-	@media (max-width: 768px) {
-		// default display
-		display: block;
-	}
-}
-.toolicon {
-	top: 10vh;
-}
-.usericon {
-	top: 15vh;
-}
-.show {
-	display: flex;
 }
