--- a/client/src/components/Rooms/style.module.scss
+++ b/client/src/components/Rooms/style.module.scss
@@ -19,6 +19,10 @@ $room-color-even: #fff;
 		@include info;
 		padding: calc($border-padding / 2);
 		flex-wrap: wrap;
+		:nth-child(2) {
+			flex-grow: 1;
+			text-align: right;
+		}
 	}
 }
 .icon {
