--- a/client/src/components/Chat/style.module.scss
+++ b/client/src/components/Chat/style.module.scss
@@ -5,7 +5,7 @@
 	padding: $border-padding;
 	border-radius: $border-radius 0px 0px 0px;
 	border: 1px solid $shadowColor;
-	box-shadow: -5px 0px 10px $shadowColor;
+	// box-shadow: -5px 0px 10px $shadowColor;
 
 	// border: 2px solid red;
 
