--- a/client/src/components/Footer/style.module.scss
+++ b/client/src/components/Footer/style.module.scss
@@ -9,9 +9,9 @@
 	font-size: $fontSize2;
 	max-width: 100%;
 	max-height: 8vh;
-	min-height: 4vh;
+	min-height: 6vh;
 
-	box-shadow: $footerBorderShadow;
+	// box-shadow: $footerBorderShadow;
 	border-radius: $footerBorderRadius;
 	padding: 0px $border-padding;
 	color: $textColor2;
