--- a/client/src/components/Rooms/style.module.scss
+++ b/client/src/components/Rooms/style.module.scss
@@ -1,13 +1,13 @@
 /* Variables */
 @import 'variables';
 
-$room-bg-color: #d1d0d0;
-$room-bg-color-other: #1323ad;
-$room-color-other: #ccc;
-$room-bg-hover: #1322adc9;
-$room-bg-color-even: #bdbbbb;
-$room-color-hover: #000;
-$room-color-even: #fff;
+// $room-bg-color: #d1d0d0;
+// $room-bg-color-other: #1323ad;
+// $room-color-other: #ccc;
+// $room-bg-hover: #1322adc9;
+// $room-bg-color-even: #bdbbbb;
+// $room-color-hover: #000;
+// $room-color-even: #fff;
 
 /* Styles */
 .room {
@@ -19,6 +19,9 @@ $room-color-even: #fff;
 		@include info;
 		padding: calc($border-padding / 2);
 		flex-wrap: wrap;
+		p {
+			color: $white !important;
+		}
 		:nth-child(2) {
 			flex-grow: 1;
 			text-align: right;
@@ -27,7 +30,7 @@ $room-color-even: #fff;
 }
 .icon {
 	font-size: $fontSize3;
-	color: $textColor2;
+	color: $white;
 	transition: var(--transition);
 	&:hover {
 		font-size: $fontSize2;
