--- a/client/src/components/Toolbox/style.module.scss
+++ b/client/src/components/Toolbox/style.module.scss
@@ -4,7 +4,7 @@
 	padding: $border-padding;
 	border-radius: 0px $border-radius 0px 0px;
 	border: 1px solid $shadowColor;
-	box-shadow: 5px 0px 10px $shadowColor;
+	// box-shadow: 5px 0px 10px $shadowColor;
 
 	// border: 2px solid red;
 
