corrected toast alert

--- a/client/src/components/Toolbox/style.module.scss
+++ b/client/src/components/Toolbox/style.module.scss
@@ -131,6 +131,9 @@
 			// width: 100%;
 			color: $white;
 			font-size: $fontSize3;
+			p {
+				color: $white;
+			}
 			:nth-child(1) {
 				font-style: bold;
 			}
