--- a/client/src/components/Footer/style.module.scss
+++ b/client/src/components/Footer/style.module.scss
@@ -13,6 +13,7 @@
 
 	// box-shadow: $footerBorderShadow;
 	border-radius: $footerBorderRadius;
+	border:2px solid black;
 	padding: 0px $border-padding;
 	color: $textColor2;
 }
