--- a/client/src/components/PopUp/style.module.scss
+++ b/client/src/components/PopUp/style.module.scss
@@ -16,7 +16,7 @@
 		// min-height: 40vh;
 		min-width: 20vw;
 		background-color: rgba(0, 0, 0, 1);
-		color: $textInverse;
+		color: $white;
 		border-radius: $border-radius;
 		border: 1px solid $themeInverseColor;
 		display: flex;
