--- a/client/src/components/Navbar/style.module.scss
+++ b/client/src/components/Navbar/style.module.scss
@@ -14,7 +14,7 @@
 
 	// box-shadow: $navBorderShadow;
 	border-radius: 0px 0px $border-radius $border-radius;
-	border: 2px solid black;
+	// border: 2px solid black;
 	padding: $border-padding;
 
 	@media screen and (min-width: 768px) {
