--- a/client/src/components/Navbar/style.module.scss
+++ b/client/src/components/Navbar/style.module.scss
@@ -139,7 +139,7 @@
 			letter-spacing: $spacing;
 
 			font-size: calc($fontSize2 * 1.8);
-			// color: $textColor2;
+			color: $textColor2;
 
 			padding: 0.5vw 0.5vw;
 			border-radius: $border-radius;
